- refactor Shangridocs Services into its own Webapp WAR. done! progress towards #39